--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.11.25",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
+    "tslint": "^6.1.3",
     "typescript": "^5.4.2"
   }
 }
