--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node build/index.js",
+    "lint": "eslint . --ext .ts",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
@@ -23,9 +24,11 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "tslint": "^6.1.3",
-    "typescript": "^5.4.2"
+    "typescript": "^5.3.3"
   }
 }
