--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/index.js",
+    "test": "npm run build && npm run lint && mocha ./tests/unit/**/*Spec.js",
+    "start": "node src/index.js",
     "lint": "eslint . --ext .ts",
     "dev": "nodemon src/index.ts"
   },
@@ -22,12 +23,18 @@
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.3.3",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.25",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "chai": "^5.1.0",
     "eslint": "^8.57.0",
+    "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
+    "sinon": "^17.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
