--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^5.1.0",
     "eslint": "^8.57.0",
     "mocha": "^10.3.0",
+    "nock": "^13.5.4",
     "nodemon": "^3.1.0",
     "sinon": "^17.0.1",
     "ts-node": "^10.9.2",
